--- a/index.html
+++ b/index.html
@@ -31,4 +31,7 @@
     </table>
     <script src="./app.js"></script>
 </body>
+<footer>
+  <p>Copyright &copy;<a href="https:github.com/Shaalle"> Shaalle</a> 2022</p>
+</footer>
 </html>
